--- a/static/css/style.css
+++ b/static/css/style.css
@@ -79,23 +79,8 @@ h1{
 
 .example-posts {
     background-color: #9ec5ff;
-    padding: 20px;
     margin-bottom: 56px;
     border-radius: 20px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.scale {
-    width: 100%;
-    height: auto;
-}
-
-.author {
-    color: #272d2d;
-    margin: 4px;
-    text-transform: uppercase;
 }
 
 .red-o {
@@ -118,16 +103,18 @@ h1{
     background-color: #f8f8f8;
 }
 
+
 .card {
     border: none;
     background-color: #f8f8f8;
     color: #272d2d;
-    width: 100%;
+    height: 100%; 
 }
 
 .image-container {
     position: relative;
     text-align: center;
+    height: 50%;
 }
 
 .image-flash {
@@ -146,6 +133,16 @@ h1{
     color: #272d2d;
     margin: 4px;
     text-transform: uppercase;
+}
+
+.post-title {
+    margin-top: 10px; 
+    margin-bottom: 10px;
+}
+
+.post-subtitle {
+    margin-bottom: 10px;
+    color: lightgray;
 }
 
 .masthead {
