--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -17,6 +17,7 @@ body {
 
 .container {
     padding-top: 20px; 
+    max-height: 18rem;
 }
 
 .mainTitle {
@@ -74,27 +75,14 @@ h1{
 
 .navbar-toggler {
     z-index: 1000;
+    position: relative;
 }
 
 .example-posts {
     background-color: #9ec5ff;
-    padding: 20px;
     margin-bottom: 56px;
     border-radius: 20px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.scale {
-    width: 100%;
-    height: auto;
-}
-
-.author {
-    color: #272d2d;
-    margin: 4px;
-    text-transform: uppercase;
+    max-height: fit-content;
 }
 
 .red-o {
@@ -117,16 +105,18 @@ h1{
     background-color: #f8f8f8;
 }
 
+
 .card {
     border: none;
     background-color: #f8f8f8;
     color: #272d2d;
-    width: 100%;
+    height: 100%; 
 }
 
 .image-container {
     position: relative;
     text-align: center;
+    height: 50%;
 }
 
 .image-flash {
@@ -145,6 +135,16 @@ h1{
     color: #272d2d;
     margin: 4px;
     text-transform: uppercase;
+}
+
+.post-title {
+    margin-top: 10px; 
+    margin-bottom: 10px;
+}
+
+.post-subtitle {
+    margin-bottom: 10px;
+    color: lightgray;
 }
 
 .masthead {
