--- a/forumapp/templates/forumapp/career.html
+++ b/forumapp/templates/forumapp/career.html
@@ -5,7 +5,7 @@
 <div class="container-fluid">
     <div class="row">
         <header>
-            <div class="banner">
+            <div class="banner career">
                 <h1 class="topic-title">Career</h1>
                 <p class="topic-intro">This topic refers to any thoughts, ideas or questions about work life and careers.</p>
             </div>
