--- a/forumapp/templates/forumapp/family.html
+++ b/forumapp/templates/forumapp/family.html
@@ -5,7 +5,7 @@
 <div class="container-fluid">
     <div class="row">
         <header>
-            <div class="banner">
+            <div class="banner family">
                 <h1 class="topic-title">Family</h1>
                 <p class="topic-intro">This topic refers to any thoughts, questions and ideas for family relationships</p>
             </div>
