--- a/forumapp/templates/forumapp/post_detail.html
+++ b/forumapp/templates/forumapp/post_detail.html
@@ -1,17 +1,15 @@
 {% extends 'base.html' %} {% block content %}
 {% load static %}
+{% load humanize %}
 
 <div class="masthead">
     <div class="container">
         <div class="row g-0">
-            <div class="col-md-6 masthead-text">
+            <div class="masthead-text">
                 <!-- Post title goes in these h1 tags -->
-                <h1 class="post-title">{{ post.title }}</h1>
+                <h2 class="post-title">{{ post.title }}</h2>
                 <!-- Post author goes before the | the post's created date goes after -->
                 <p class="post-subtitle">{{ post.author }} | {{ post.created_on }}</p>
-            </div>
-            <div class="d-none d-md-block col-md-6 masthead-image">
-                <img src="{% static 'images/background-image.png' %}" class="scale" alt="placeholder">
             </div>
         </div>
     </div>
@@ -23,7 +21,7 @@
             <div class="card-body">
                 <!-- The post content goes inside the card-text. -->
                 <!-- Use the | safe filter inside the template tags -->
-                <p class="card-text">
+                <p class="card-text post-content">
                     {{ post.content | safe }}
                 </p>
             </div>
@@ -32,12 +30,15 @@
 </div>
 
 <!-- Display existing comments -->
-<div class="container">
+<div class="container comments">
     <div class="row">
         <div class="col">
             <h2>Comments</h2>
             {% for comment in post.comments.all %}
-                <p>{{ comment.body }} - {{ comment.author.username }}</p>
+                <div class="card">
+                    <p>{{ comment.body }} - {{ comment.author.username }}</p>
+                    <p> {{ comment.updated_on | naturaltime }}</p>
+                </div>
             {% endfor %}
         </div>
     </div>
