--- a/forumapp/templates/forumapp/wall_of_complaints.html
+++ b/forumapp/templates/forumapp/wall_of_complaints.html
@@ -5,8 +5,8 @@
 <div class="container-fluid">
     <div class="row">
         <header>
-            <div class="banner">
-                <h1 class="topic-title">Wall of Complaints</h1>
+            <div class="banner complaints">
+                <h1 class="complaints-title">Wall of Complaints</h1>
                 <p class="topic-intro">This page is made for getting our frustrations out, complaining away about whatever is bothering us at the moment.</p>
             </div>
         </header>
