--- a/static/css/style.css
+++ b/static/css/style.css
@@ -194,27 +194,6 @@ h1{
 
 /* post_detail.html */
 
-
-.red-o {
-    color: #E84610;
-}
-
-.thin {
-    font-weight: 300;
-}
-
-.light-bg {
-    background-color: #f8f8f8;
-}
-
-.dark-bg {
-    background-color: #272d2d;
-}
-
-.main-bg {
-    background-color: #f8f8f8;
-}
-
 .masthead {
     margin-top: 10px;
     overflow: hidden;
@@ -241,6 +220,29 @@ h1{
     font-size: 2rem;
 }
 
+.comment-comment {
+    height: 2rem;
+}
+
+.red-o {
+    color: #E84610;
+}
+
+.thin {
+    font-weight: 300;
+}
+
+.light-bg {
+    background-color: #f8f8f8;
+}
+
+.dark-bg {
+    background-color: #272d2d;
+}
+
+.main-bg {
+    background-color: #f8f8f8;
+}
 
 .link {
     color: #23BBBB;
