--- a/forumapp/templates/forumapp/post_detail.html
+++ b/forumapp/templates/forumapp/post_detail.html
@@ -24,6 +24,15 @@
                 <p class="card-text post-content">
                     {{ post.content | safe }}
                 </p>
+                {% if request.user == post.author %}
+                    <p>
+                        <a href="{% url 'post-edit' pk=post.id %}">Edit post</a>
+                        <form method="post" action="{% url 'delete-post' slug=post.slug %}" style="display:inline;">
+                            {% csrf_token %}
+                            <button type="submit" onclick="return confirm('Are you sure you want to delete this post?')">Delete</button>
+                        </form>
+                    </p>
+                {% endif %}
             </div>
         </div>
     </div>
@@ -51,6 +60,10 @@
                     <p>
                         {% if request.user == comment.author %}
                             <a href="{% url 'edit-comment' pk=comment.id %}">Edit</a>
+                            <form method="post" action="{% url 'delete-comment' pk=comment.id %}" style="display:inline;">
+                                {% csrf_token %}
+                                <button type="submit" onclick="return confirm('Are you sure you want to delete this comment?')">Delete</button>
+                            </form>
                         {% endif %}
                     </p>
                     <br/><br/>
