--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -223,21 +223,17 @@ h1{
 }
 
 .comment-container {
-    max-height: 60vh;
-    overflow-y: auto;
+    height: auto;
 }
 
 .comment-card {
     background-color: #fff;
     margin-bottom: 10px;
+    border-bottom: 1px solid #272d2d;
 }
 
 .add-comment {
     margin-top: 10px;
-}
-
-.red-o {
-    color: #E84610;
 }
 
 .thin {
