--- a/forumapp/templates/forumapp/post_detail.html
+++ b/forumapp/templates/forumapp/post_detail.html
@@ -15,17 +15,20 @@
 
 <div class="container">
     <div class="row">
-        <div class="col card mb-4  mt-3 left  top">
+        <div class="col card">
             <div class="card-body">
                 <p class="card-text post-content">
                     {{ post.content | safe }}
                 </p>
                 {% if request.user == post.author %}
                     <p>
-                        <a href="{% url 'post-edit' pk=post.id %}">Edit post</a>
+                        <form method="post" action="{% url 'post-edit' pk=post.id %}" style="display:inline;">
+                            {% csrf_token %}
+                            <button type="submit" class="post-button">Delete</button>
+                        </form>
                         <form method="post" action="{% url 'delete-post' slug=post.slug %}" style="display:inline;">
                             {% csrf_token %}
-                            <button type="submit" onclick="return confirm('Are you sure you want to delete this post?')">Delete</button>
+                            <button type="submit" class="post-button" onclick="return confirm('Are you sure you want to delete this post?')">Delete</button>
                         </form>
                     </p>
                 {% endif %}
@@ -54,11 +57,13 @@
                     </strong>
                     <p>
                         {% if request.user == comment.author %}
-                            <a href="{% url 'edit-comment' pk=comment.id %}">Edit</a>
-                            <form method="post" action="{% url 'delete-comment' pk=comment.id %}" style="display:inline;">
-                                {% csrf_token %}
-                                <button type="submit" onclick="return confirm('Are you sure you want to delete this comment?')">Delete</button>
-                            </form>
+                        <form method="get" action="{% url 'edit-comment' pk=comment.id %}" style="display: inline;">
+                            <button type="submit" class="comment-button">Edit</button>
+                        </form>
+                        <form method="post" action="{% url 'delete-comment' pk=comment.id %}" style="display:inline;">
+                            {% csrf_token %}
+                            <button type="submit" class="comment-button" onclick="return confirm('Are you sure you want to delete this comment?')">Delete</button>
+                        </form>
                         {% endif %}
                     </p>
                     <hr class="comment-line"/>
