--- a/forumapp/templates/forumapp/post_detail.html
+++ b/forumapp/templates/forumapp/post_detail.html
@@ -13,7 +13,7 @@
     </div>
 </div>
 
-<div class="container">
+<div class="masthead container">
     <div class="row">
         <div class="col card">
             <div class="card-body">
@@ -24,7 +24,7 @@
                     <p>
                         <form method="post" action="{% url 'post-edit' pk=post.id %}" style="display:inline;">
                             {% csrf_token %}
-                            <button type="submit" class="post-button">Delete</button>
+                            <button type="submit" class="post-button">Edit</button>
                         </form>
                         <form method="post" action="{% url 'delete-post' slug=post.slug %}" style="display:inline;">
                             {% csrf_token %}
@@ -55,8 +55,8 @@
                     <strong>
                         {{ comment.updated_on | naturaltime }}
                     </strong>
+                    {% if request.user == comment.author %}
                     <p>
-                        {% if request.user == comment.author %}
                         <form method="get" action="{% url 'edit-comment' pk=comment.id %}" style="display: inline;">
                             <button type="submit" class="comment-button">Edit</button>
                         </form>
@@ -64,8 +64,8 @@
                             {% csrf_token %}
                             <button type="submit" class="comment-button" onclick="return confirm('Are you sure you want to delete this comment?')">Delete</button>
                         </form>
-                        {% endif %}
                     </p>
+                    {% endif %}
                     <hr class="comment-line"/>
                 {% endfor %}
             </div>
@@ -82,7 +82,7 @@
             <form method="post" action="{% url 'add_comment' slug=post.slug %}">
                 {% csrf_token %}
                 {{ comment_form.as_p }}
-                <button type="submit">Add Comment</button>
+                <button type="submit" class="comment-button">Add Comment</button>
             </form>
         </div>
     </div>
