--- a/forumapp/templates/forumapp/index.html
+++ b/forumapp/templates/forumapp/index.html
@@ -9,7 +9,7 @@
             <div class="intro">
             <h1 class="mainTitle">Crip Talk</h1>
             <p class="forumIntro">A separatist forum for those of us who are differently abled to connect with, relate to and learn from each other</p>
-            <a class="btn btn-primary" href="{% url 'signup' %}" role="button">Sign Up</a>
+            <a class="btn btn-primary signup" href="{% url 'signup' %}" role="button">Sign Up</a>
             </div>
         </header>
         <!-- Example thread posts column in carousel -->
