--- a/forumapp/templates/forumapp/post_detail.html
+++ b/forumapp/templates/forumapp/post_detail.html
@@ -15,7 +15,7 @@
 
 <div class="masthead container">
     <div class="row">
-        <div class="col card">
+        <div class="col mb-4 mt-3 left top card">
             <div class="card-body">
                 <p class="card-text post-content">
                     {{ post.content | safe }}
@@ -24,11 +24,11 @@
                     <p>
                         <form method="post" action="{% url 'post-edit' pk=post.id %}" style="display:inline;">
                             {% csrf_token %}
-                            <button type="submit" class="post-button">Edit</button>
+                            <button type="submit" class="btn btn-primary post-button">Edit</button>
                         </form>
                         <form method="post" action="{% url 'delete-post' slug=post.slug %}" style="display:inline;">
                             {% csrf_token %}
-                            <button type="submit" class="post-button" onclick="return confirm('Are you sure you want to delete this post?')">Delete</button>
+                            <button type="submit" class="btn btn-primary post-button" onclick="return confirm('Are you sure you want to delete this post?')">Delete</button>
                         </form>
                     </p>
                 {% endif %}
@@ -58,11 +58,11 @@
                     {% if request.user == comment.author %}
                     <p>
                         <form method="get" action="{% url 'edit-comment' pk=comment.id %}" style="display: inline;">
-                            <button type="submit" class="comment-button">Edit</button>
+                            <button type="submit" class="btn btn-primary comment-button">Edit</button>
                         </form>
                         <form method="post" action="{% url 'delete-comment' pk=comment.id %}" style="display:inline;">
                             {% csrf_token %}
-                            <button type="submit" class="comment-button" onclick="return confirm('Are you sure you want to delete this comment?')">Delete</button>
+                            <button type="submit" class="btn btn-primary comment-button" onclick="return confirm('Are you sure you want to delete this comment?')">Delete</button>
                         </form>
                     </p>
                     {% endif %}
@@ -82,7 +82,7 @@
             <form method="post" action="{% url 'add_comment' slug=post.slug %}">
                 {% csrf_token %}
                 {{ comment_form.as_p }}
-                <button type="submit" class="comment-button">Add Comment</button>
+                <button type="submit" class="btn btn-primary comment-button">Add Comment</button>
             </form>
         </div>
     </div>
