--- a/forumapp/templates/forumapp/post_detail.html
+++ b/forumapp/templates/forumapp/post_detail.html
@@ -13,15 +13,15 @@
     </div>
 </div>
 
-<div class="masthead container">
+<div class="container">
     <div class="row">
         <div class="col mb-4 mt-3 left top card">
             <div class="card-body">
                 <p class="card-text post-content">
                     {{ post.content | safe }}
                 </p>
+                <p>
                 {% if request.user == post.author %}
-                    <p>
                         <form method="post" action="{% url 'post-edit' pk=post.id %}" style="display:inline;">
                             {% csrf_token %}
                             <button type="submit" class="btn btn-primary post-button">Edit</button>
@@ -30,8 +30,8 @@
                             {% csrf_token %}
                             <button type="submit" class="btn btn-primary post-button" onclick="return confirm('Are you sure you want to delete this post?')">Delete</button>
                         </form>
-                    </p>
                 {% endif %}
+                </p>
             </div>
         </div>
     </div>
