--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -39,15 +39,15 @@ h1{
     background-color: #ff4d29;
     color: #f8f8f8;
     border-color: #ff4d29;
-    border-radius: 15px;
-    font-size: 30px;
-    padding: 10px 20px;
 } 
 
 .btn-primary,
 .signup,
 .read-more {
     font-family: "Bebas Neue", sans-serif;
+    border-radius: 15px;
+    font-size: 30px;
+    padding: 10px 20px;
 }
 
 .btn-primary:hover,
@@ -213,10 +213,13 @@ h1{
     background-color: #fff;
     font-family: "Roboto", sans-serif;
     font-size: 1rem;
+    height: 10vh;
+    width: 100%;
 }
 
 .comment-container {
     height: auto;
+    padding: 8px 16px;
 }
 
 .comment-card {
@@ -225,14 +228,16 @@ h1{
 }
 
 .add-comment {
-    margin-top: 20px;
+    margin-top: 25px;
 }
 
 .btn-primary, 
 .comment-button, 
 .post-button {
     font-family: "Roboto", sans-serif;
-    font-weight: 400;
+    border-radius: 5px;
+    font-size: 15px;
+    padding: 4px 8px;
 }
 
 .thin {
