--- a/forumapp/templates/forumapp/career.html
+++ b/forumapp/templates/forumapp/career.html
@@ -11,6 +11,8 @@
             </div>
         </header>
     </div>
-    {% include 'forumapp/post_list.html' %}
+    <div class="topics-posts">
+        {% include 'forumapp/post_list.html' %}
+    </div>
 </div>
 {% endblock %}
