--- a/forumapp/templates/forumapp/signup.html
+++ b/forumapp/templates/forumapp/signup.html
@@ -116,7 +116,7 @@
             </div>
         </div>
         <div class="col-md-12">
-            <button class="btn btn-primary w-100" type="submit">Register</button>
+            <button class="btn btn-primary" type="submit">Register</button>
         </div>
         <div class="mx-auto">
             <p class="mb-0 mt-3"><small class="text-dark mr-2">Already have an account ?</small> <a
