--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -9,7 +9,7 @@
         Hi {{ user.username }}, you are logged in!
         <form action="{% url 'logout' %}" method="post">
             {% csrf_token %}
-            <button type="submit">Log Out</button>
+            <button class="btn btn-primary" type="submit">Log Out</button>
         </form>
 {% else %}
     <form method="post">
