--- a/static/css/style.css
+++ b/static/css/style.css
@@ -96,7 +96,12 @@ h1{
     border: none;
     background-color: #f8f8f8;
     color: #272d2d;
-    height: 100%; 
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .image-container {
@@ -142,7 +147,6 @@ h1{
 
 .card-text {
     margin-bottom: 10px;
-    margin-left: 5%;
     color: #272d2d;
 }
 
