--- a/templates/base.html
+++ b/templates/base.html
@@ -84,8 +84,9 @@
                     </li>
                     {% endif %}
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <form class="d-flex" method="POST" action="{% url 'search-results' %}">
+                    {% csrf_token %}
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="searched">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
             </div>
