--- a/forumapp/templates/forumapp/create_post.html
+++ b/forumapp/templates/forumapp/create_post.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% if user.is_authenticated %}
     <h2>Create a New Post</h2>
-    <form method="post">
+    <form method="post" action="{% url 'create_post' %}">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Create Post</button>
