--- a/forumapp/templates/forumapp/post_detail.html
+++ b/forumapp/templates/forumapp/post_detail.html
@@ -31,6 +31,7 @@
                             <button type="submit" class="btn btn-primary post-button" onclick="return confirm('Are you sure you want to delete this post?')">Delete</button>
                         </form>
                 {% endif %}
+                    <button onclick="openReportForm()">Report</button>
                 </p>
             </div>
         </div>
